@@ -1,6 +1,5 @@
 var utils = require("./utils"),
-    Mapper = require("./mapper"),
-    Router = require("./router");
+    Mapper = require("./mapper");
 
 module.exports = Builder;
 
@@ -21,15 +20,6 @@ function Builder(app) {
  */
 Builder.prototype.use = function use(middleware) {
     var args = Array.prototype.slice.call(arguments, 1);
-
-    if (this._routes) {
-        var routes = this._routes;
-        delete this._routes;
-
-        this._stack.push(function (app) {
-            return makeRouter(app, routes);
-        });
-    }
 
     if (this._map) {
         var map = this._map;
@@ -59,20 +49,6 @@ Builder.prototype.map = function map(location, callback) {
 }
 
 /**
- * Specifies an `app` to run when the pathInfo matches the given `pattern`
- * (and optionally `methods`). Accepts the same arguments as Router.route.
- */
-Builder.prototype.route = function route(pattern, app, methods) {
-    if (!this._routes) {
-        this._routes = [];
-    }
-
-    this._routes.push([pattern, app, methods]);
-}
-
-Router.enableRouting(Builder.prototype);
-
-/**
  * Specifies the given `app` to run at the root of this builder.
  */
 Builder.prototype.run = function run(app) {
@@ -85,10 +61,6 @@ Builder.prototype.run = function run(app) {
 Builder.prototype.toApp = function toApp() {
     var app = this.app;
 
-    if (this._routes) {
-        app = makeRouter(app, this._routes);
-    }
-
     if (this._map) {
         app = makeMapper(app, this._map);
     }
@@ -99,16 +71,6 @@ Builder.prototype.toApp = function toApp() {
     }
 
     return app;
-}
-
-function makeRouter(app, routes) {
-    var router = new Router(app);
-
-    for (var i = 0, len = routes.length; i < len; ++i) {
-        router.route.apply(router, routes[i]);
-    }
-
-    return router.toApp();
 }
 
 function makeMapper(app, map) {
