@@ -15,13 +15,10 @@ function Router(app) {
     this.run(app || utils.notFound);
 }
 
-Router.compileRoute = compileRoute;
-Router.enableRouting = enableRouting;
-
 /**
  * Routes all requests with a pathInfo that match the given `pattern` to the
  * given `app`. If the `pattern` is a string, it is compiled using
- * +Router.compileRoute+.
+ * `Router.compileRoute`.
  *
  * If `methods` are given, the match will only occur when the `requestMethod`
  * matches one of those methods. Otherwise, the route is not restricted to a
@@ -56,7 +53,22 @@ Router.prototype.route = function route(pattern, app, methods) {
     }
 }
 
-enableRouting(Router.prototype);
+var methods = {
+    get: ["GET", "HEAD"],
+    post: "POST",
+    put: "PUT",
+    del: "DELETE",
+    head: "HEAD",
+    options: "OPTIONS"
+};
+
+for (var method in methods) {
+    (function (verbs) {
+        Router.prototype[method] = function (pattern, app) {
+            this.route(pattern, app, verbs);
+        }
+    })(methods[method]);
+}
 
 Router.prototype.run = function run(app) {
     this.app = app;
@@ -108,28 +120,7 @@ function compileRoute(route, keys) {
     return new RegExp("^" + pattern + "$");
 }
 
-/**
- * Applies get/post/etc. routing methods to the given `obj` which call `route`
- * with the corresponding HTTP verb(s) when called.
- */
-function enableRouting(obj) {
-    var methods = {
-        get: ["GET", "HEAD"],
-        post: "POST",
-        put: "PUT",
-        del: "DELETE",
-        head: "HEAD",
-        options: "OPTIONS"
-    };
-
-    for (var method in methods) {
-        (function (verbs) {
-            obj[method] = function (pattern, app) {
-                this.route(pattern, app, verbs);
-            }
-        })(methods[method]);
-    }
-}
+Router.compileRoute = compileRoute;
 
 function tryRoutes(routes, env, callback, defaultApp) {
     return function tryRoute(n) {
